package isep.switchdev;

public class Code {
    private final String isbn10;
    private final String isbn13;
    private final String issn;

    public Code(String isbn10, String isbn13, String issn) {

        this.isbn10 = isbn10;
        this.isbn13 = isbn13;
        this.issn = issn;
    }
    public String getIsbn10() {
        return isbn10;
    }
    public String getIsbn13() {
        return isbn13;
    }
    public String getIssn() {
        return issn;
    }
}
