package isep.switchdev.Enum;

public enum Condition {
    NEW,
    LIKE_NEW,
    VERY_GOOD,
    GOOD,
    ACCEPTABLE,
}
