package isep.switchdev.Enum;

public enum Genre {
}
