package isep.switchdev.Enum;

public enum TypeOfBinding {
    HARDBACK,
    PAPERBACK,
}
