package isep.switchdev;

public class Publisher {
}
